# runstaskell

./: .ghci  .travis.yml  README.md  Setup.hs  package.yaml  runstaskell.cabal
customPackageSets/: custom-1
scripts/: updateCustomPackageSet.hs
src/: Bootstrap.hs  BootstrapMain.hs  Main.hs  PackageSets.hs  Path.hs  Run.hs  Runstaskell.hs  RunstaskellMain.hs  Sandboxes.hs
src/Main/: Utils.hs
src/PackageSets/: Types.hs
test/: 01.hs  02.hs  03.hs  04.hs  BootstrapSpec.hs  MainSpec.hs  PackageSetsSpec.hs  RunSpec.hs  RunstaskellSpec.hs  full-test.sh
test/fake-bin/: runstaskell
