name: runstaskell
version: 0.1
cabal-version: >= 1.22
license: BSD3
license-file: LICENSE
author: Renhui Shen, Sönke Hahn
copyright: Zalora South East Asia Pte Ltd
maintainer: soenke.hahn@zalora.com
build-type: Custom

executable runstaskell
  main-is:
    Main.hs
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall -threaded -fno-warn-name-shadowing
  build-depends:
      base == 4.*
    , process
    , filepath

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    src, test
  default-language:
    Haskell2010
  ghc-options:
    -Wall -threaded -fno-warn-name-shadowing -O0
  main-is:
    Spec.hs
  build-depends:
      base == 4.*
    , hspec
    , silently
    , filepath
